# sample_project_demo

./: .gitignore  .sdkmanrc  CLAUDE.md  README.arch.md  README.claude.md  README.code.md  README.localdev.md  README.md  README.observability.md  README.tools.md  README.windows.md  docker-compose.yml  main.md  main.py  otel_setup.py  pyproject.toml  setup-jaeger.sh  setup.md  setup.sh  teardown.md  teardown.sh  test.md  test.sh
api-gateway/: Dockerfile  main.py  otel_setup.py  pyproject.toml
backend-service/: Dockerfile  backend_service.py  pyproject.toml
ui-app/: .dockerignore  .env  Dockerfile  app.js  package-lock.json  package.json  tracing.js  ui-app.md
ui-app/public/: index.html
